[package]
name = "wp-connectors-labs"
version = "0.1.6" #@gxl:set(version)
edition = "2024"
description = "Experimental connectors for warp-parse: dmdb"
authors = ["WP Labs Team"]
license = "Apache-2.0"
repository = "https://github.com/wp-labs/wp-connectors"

[features]
default = ["dmdb"]
dmdb = []

[dependencies]
wp-connector-api = "0.10"
wp-model-core = "0.8"
wp-log = "0.4"
wp-conf-base = "0.4"
orion-error = "0.8"
orion_conf = { version = "0.7", features = ["yaml", "toml"] }

async-trait = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
educe = { version = "0.6", default-features = false, features = ["Debug", "Default"] }
bytes = "1"
libloading = "0.8"
thiserror = "2"
hex = "0.4"

[dev-dependencies]
wp-connector-test-utils = { version = "0.2.0", git = "https://github.com/wp-labs/wp-connector-test-utils.git" }
httpmock = "0.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"
